--- a/css/elements/_nav-post-page.scss
+++ b/css/elements/_nav-post-page.scss
@@ -4,7 +4,7 @@ section.navigation {
 	.button__wrapper {
 		display: block;
 		text-align: center;
-		font-size: $font__size--std;
+		font-size: $font_size-std;
 		padding: ($baseline / 2) ($baseline * 2);
 	}
 }
