--- a/css/elements/_nav-primary.scss
+++ b/css/elements/_nav-primary.scss
@@ -9,14 +9,14 @@ ul#nav-icon__wrapper {
 		button {
 			background: none;
 			border: none !important;
-			color: $color__background--accent;
-			font-size: $font__size--std !important;
+			color: $clr_bg-accent;
+			font-size: $font_size-std !important;
 			padding: $baseline;
-			line-height: $font__size--med;
+			line-height: $font_size-med;
       margin-top: 4px;
 			&:hover {
 				background: none;
-				color: lighten($color__background--accent, 100%);
+				color: lighten($clr_bg-accent, 100%);
 			}
 		}
 	}
@@ -30,22 +30,22 @@ aside.sidebar {
 			display: block;
 			padding: 0;
 			margin: 0;
-			box-shadow: inset 0 -2px $color__background--main;
+			box-shadow: inset 0 -2px $clr_bg-main;
 			&:last-child {
-				box-shadow: inset 0 0 $color__background--main;
+				box-shadow: inset 0 0 $clr_bg-main;
 			}
 			a {
 				display: block;
 				width: 100%;
 				text-align: left;
-				color: $color__background--main;
+				color: $clr_bg-main;
 				text-decoration: none;
 				padding: $baseline;
-				//@include linear-gradient($color__brand--main, $color__brand--main);
-				transition: background-image $transition__easing--main $transition__speed--fast, box-shadow $transition__easing--main $transition__speed--fast;
+				//@include linear-gradient($clr_black, $clr_black);
+				transition: background-image $ease-main $speed-fast, box-shadow $ease-main $speed-fast;
 				&:hover {
-					//@include linear-gradient($color__brand--main, lighten($color__brand--main, 10%));
-					box-shadow: inset 0 -4px $color__background--main;
+					//@include linear-gradient($clr_black, lighten($clr_black, 10%));
+					box-shadow: inset 0 -4px $clr_bg-main;
 				}
 			}
 		}
