--- a/css/elements/post/_post-meta.scss
+++ b/css/elements/post/_post-meta.scss
@@ -1,12 +1,12 @@
 .post__data--meta {
-	font-size: $font__size--xsm;
+	font-size: $font_size-xsm;
+  color: $clr_grey-mid;
 	padding: $baseline 0 ($baseline - 1) 0;
-	border-bottom: 1px solid rgba($font__color--main, $opacity--standard);
 	margin-bottom: $baseline;
 
 	ul {
 		li {
-			font-size: $font__size--sml;
+			font-size: $font_size-sml;
 			line-height: ($baseline * 1.5);
 			&:before {
 				font-family: FontAwesome;
@@ -73,9 +73,8 @@
 		@include border-radius(50%);
 		display: inline-block;
 		&.author__avatar--small {
-			width: $font__size--sml;
-			height: $font__size--sml;
+			width: $font_size-sml;
+			height: $font_size-sml;
 		}
 	}
 }
-
