--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@
 // Global
 @import 'css/global/global';
 @import 'css/global/buttons';
+@import 'css/global/links';
 
 // Typography
 @import 'css/typography/typography';
@@ -44,4 +45,3 @@
 
 // Page specific
 @import 'css/elements/page-content';
-
