--- a/css/elements/_colophon.scss
+++ b/css/elements/_colophon.scss
@@ -14,7 +14,7 @@ button#return_to_top {
 		z-index: 10000;
 		transform: translate3d(100%, 0, 0);
 		-webkit-transform: translate3d(100%, 0, 0);
-		transition: $transition__easing--main $transition__speed--fast;
+		transition: $ease-main $speed-fast;
 		margin: 0 !important;
 	}
 	&.slideout {
