--- a/css/elements/post/_image-hero.scss
+++ b/css/elements/post/_image-hero.scss
@@ -22,7 +22,7 @@ header.post__header {
 		width: 100%;
 		height: 100%;
 		padding: 0;
-		@include linear-gradient(rgba($color__shadow, $opacity--transparent), rgba($color__shadow, $opacity--standard));
+		@include linear-gradient(rgba($clr_shadow, $opacity-transparent), rgba($clr_shadow, $opacity-standard));
 	}
 
 	h1 {
@@ -30,8 +30,8 @@ header.post__header {
 		margin: 0 auto;
 		padding: 1rem;
 		text-align: left;
-		color: $color__background--main;
-		text-shadow: 0 0 $baseline rgba($color__shadow, $opacity--solid);
+		color: $clr_bg-main;
+		text-shadow: 0 0 $baseline rgba($clr_shadow, $opacity-solid);
 		text-decoration: none;
 	}
 
@@ -39,13 +39,13 @@ header.post__header {
 		display: block;
 		max-width: 400px;
 		margin: $baseline auto;
-		color: $color__background--main;
-		text-shadow: 0 0 ($baseline / 2) rgba($color__shadow, $opacity--solid);
+		color: $clr_bg-main;
+		text-shadow: 0 0 ($baseline / 2) rgba($clr_shadow, $opacity-solid);
 		text-decoration: none;
 	}
 	@media screen and (max-width: 567px) {
 		h1 {
-			font-size: $font__size--lrg;
+			font-size: $font_size-lrg;
 		}
 	}
 	@media screen and (min-width: 568px) and (max-width: 799px) {
@@ -137,12 +137,12 @@ header.post__header {
 
 	p {
 		a {
-			color: $color__background--main;
+			color: $clr_bg-main;
 			border: none;
-			font-size: $font__size--lrg;
+			font-size: $font_size-lrg;
 
 			&:hover {
-				color: $color__background--main;
+				color: $clr_bg-main;
 			}
 		}
 	}
