--- a/css/elements/post/_post-teaser.scss
+++ b/css/elements/post/_post-teaser.scss
@@ -11,40 +11,36 @@
 		width: 400px;
 		font-size: 1rem;
 		vertical-align: top;
-		transition: $transition__easing--main $transition__speed--fast;
-		transform: translate3d(0, 0, 0);
-		-webkit-transform: translate3d(0, 0, 0);
-		&.inertia {
-			transform: translate3d(0, 33vh, 0);
-			-webkit-transform: translate3d(0, 33vh, 0);
-		}
-		&:first-child {
-			width: 800px;
-			@media screen and (max-width: 799px) {
-				width: 100%;
-			}
 
-		}
+		// &:first-child {
+		// 	width: 800px;
+		// 	@media screen and (max-width: 799px) {
+		// 		width: 100%;
+		// 	}
+		//
+		// }
 		.inner {
 			position: relative;
-			transition: $transition__easing--main $transition__speed--fast;
-			@include box-shadow(0, 0, ($baseline / 2), $color__shadow, $opacity--standard);
+			transition: $ease-main $speed-fast;
+			box-shadow: inset 1px 1px 0 rgba($clr_grey-mid, $opacity-standard), inset -1px -1px 0 rgba($clr_grey-mid, $opacity-standard);
 			margin: ($baseline / 2);
-			background-color: $color__background--main;
-			&:hover {
-				@include box-shadow(0, 0, ($baseline * 2), $color__shadow, $opacity--standard);
-			}
+			background-color: $clr_bg-main;
+
 			.post__content {
 				padding: 1rem;
 				text-align: left;
 				p {
-					color: $font__color--main;
-					font-size: $font__size--std;
+					color: $font_clr-main;
+					font-size: $font_size-std;
 				}
 			}
 			footer.post__footer {
-				padding: 0 $baseline $baseline $baseline;
+				padding: $baseline;
 				text-align: left;
+				line-height: $lh;
+				ul li {
+					font-size: $font_size-sml;
+				}
 			}
 		}
 		@media screen and (max-width: 799px) {
@@ -52,38 +48,3 @@
 		}
 	}
 }
-
-//
-//.post__size--large {
-//	width: 800px;
-//	@media screen and (max-width: 799px){
-//		width: 100%;
-//	}
-//}
-//
-//.post__size--wide {
-//	width: 800px;
-//	.post__content {
-//		display: none;
-//	}
-//	@media screen and (max-width: 799px){
-//		width: 100%;
-//	}
-//}
-//
-//.post__size--tall {
-//	width: 400px;
-//	@media screen and (max-width: 399px){
-//		width: 100%;
-//	}
-//}
-//
-//.post__size--small {
-//	width: 400px;
-//	.post__content {
-//		display: none;
-//	}
-//	@media screen and (max-width: 399px){
-//		width: 100%;
-//	}
-//}
