--- a/css/global/_links.scss
+++ b/css/global/_links.scss
@@ -1,15 +1,36 @@
-// Text Links
-a, a:link, a:active {
-  font-family: inherit;
-  font-size: inherit;
-  color: $color__brand--main;
-  cursor: pointer !important;
+.read-more {
+	display: block;
 	text-decoration: none;
-	border-bottom: 1px solid $color__brand--accent;
-  &:hover {
-	color: lighten($color__brand--main, 20%);
-  }
-  &:visited {
-	color: lighten($color__brand--main, 5%);
-  }
+	color: inherit;
+	font-family: $font_face-accent;
+	font-size: $font_size-std;
+	margin-top: 1rem;
+	box-shadow: none !important;
+	position: relative;
+	.arrow {
+		display: inline-block;
+		margin-left: 0.5rem;
+		opacity: 1;
+		color: $clr_brand;
+	}
+
+	.underline {
+		display: block;
+		position: absolute;
+		right: 0;
+		bottom: -0.5rem;
+		height: 4px;
+		box-shadow: inset 0 -4px 0 $clr_brand;
+		z-index: 1;
+	}
+
+	&:hover {
+		.underline {
+			animation: underline 1 $speed-slow;
+		}
+
+		.arrow {
+			animation: arrowbounce 1 $speed-slow ($speed-slow / 2);
+		}
+	}
 }
