--- a/css/typography/_links.scss
+++ b/css/typography/_links.scss
@@ -1,15 +1,21 @@
 // Text Links
-a, a:link, a:active {
-  font-family: inherit;
-  font-size: inherit;
-  color: $color__brand--main;
-  cursor: pointer !important;
-	text-decoration: none;
-	border-bottom: 1px solid $color__brand--accent;
-  &:hover {
-	color: lighten($color__brand--main, $color__change--main);
-  }
-  &:visited {
-	color: lighten($color__brand--main, $color__change--slight);
-  }
+
+.post {
+	a,
+	a:active,
+	a:link {
+		font-family: inherit;
+		text-decoration: none;
+		box-shadow: inset 0 -2px 0 $clr_brand;
+		padding-bottom: 4px;
+		transition: box-shadow $ease-main $speed-fast;
+		color: inherit;
+		cursor: pointer !important;
+
+		&:hover {
+			box-shadow: inset 0 -4px 0 $clr_brand;
+		}
+
+		&:visited {}
+	}
 }
