--- a/css/elements/post/_post-single.scss
+++ b/css/elements/post/_post-single.scss
@@ -92,11 +92,11 @@ article.post--single {
 			width: 100%;
 			margin: ($baseline / 2) 0;
 			padding: ($baseline / 2) $baseline;
-			border-left: ($baseline / 6) solid $clr_black;
+			border-left: ($baseline / 6) solid $clr_brand;
 			font-weight: normal;
 			font-style: normal;
 			color: lighten($font_clr-main, 10%);
-			font-size: $font_size-med;
+			font-size: $font_size-std;
 			font-family: $font_face-accent;
 			p {
 				font-size: inherit;
