--- a/css/structure/_flag.scss
+++ b/css/structure/_flag.scss
@@ -3,8 +3,8 @@
 	top: 0;
 	left: (($baseline / 2) - $baseline);
 	z-index: 120;
-	background-color: $clr_grey-mid;
-	color: $clr_bg-main;
+	background-color: $clr_brand;
+	color: $clr_white;
 	font-family: $font_face-accent;
 	font-weight: 600;
 	padding: ($baseline / 2);
