--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -57,18 +57,14 @@ html {
 		.masonry {
 			margin-left: auto;
 			margin-right: auto;
-			max-width: 2000px;
 			@media screen and (max-width: 799px) {
 				max-width: 100%;
 			}
 			@media screen and (min-width: 800px) and (max-width: 1199px) {
 				max-width: 800px;
 			}
-			@media screen and (min-width: 1200px) and (max-width: 1599px) {
+			@media screen and (min-width: 1200px) {
 				max-width: 1200px;
-			}
-			@media screen and (min-width: 1600px) and (max-width: 2000px) {
-				max-width: 1600px;
 			}
 		}
 	}
