--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@
 @import 'css/typography/typography';
 @import 'css/typography/lists';
 @import 'css/typography/links';
+@import 'css/typography/bullets';
 
 // Structure
 @import 'css/structure/forms';
