--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,6 +1,7 @@
 // Baseline
 $baseline: 18px;
 $bl: $baseline;
+$b: $baseline;
 
 // Colors
 $clr_brand: #a1213d;
@@ -26,12 +27,12 @@ $font_face-accent: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, 
 
 $font_clr-main: $clr_grey-dark;
 
-$font_size-xsm: ($baseline * 0.75);
-$font_size-sml: ($baseline * 0.85);
-$font_size-std: $baseline;
-$font_size-med: ($baseline * 1.33);
-$font_size-lrg: ($baseline * 1.66);
-$font_size-xlg: ($baseline * 2.33);
+$font_size-xsm: ($b * 1);
+$font_size-sml: ($b * 1.2);
+$font_size-std: ($b * 1.6);
+$font_size-med: ($b * 2);
+$font_size-lrg: ($b * 3);
+$font_size-xlg: ($b * 4);
 
 $line-height: 1.66;
 $lh: $line-height;
@@ -47,6 +48,11 @@ $opacity-solid: 1;
 $ease-main: cubic-bezier(0.64, 0.22, 0.69, 0.98);
 $ease-bounce: cubic-bezier(.66,-0.59,.39,1.51);
 
-$speed-fastest: 180ms;
-$speed-fast: 200ms;
+// Transition Speeds
+$speed-fastest: 100ms;
+$speed-fast: 250ms;
+$speed-std: 500ms;
 $speed-slow: 800ms;
+$speed-slowest: 1000ms;
+
+$max-width: 1440px;
