--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -1,94 +1,103 @@
 html {
-  font-size: 18px;
-    @media (min-width: 768px) {
-        font-size: between(20px, 18px, 768px, 1366px);
-    }
-    @media (min-width: 1366px) {
-        font-size: 18px;
-    }
+	font-size: 18px;
+	@media (min-width: 768px) {
+		font-size: between(20px, 18px, 768px, 1366px);
+	}
+	@media (min-width: 1366px) {
+		font-size: 18px;
+	}
 	-webkit-overflow-scrolling: touch;
-	body {
-		// Structure
-		position: relative;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
+
+	* {
+		@include box-sizing(border-box);
+		@include textSize(none);
 		padding: 0;
 		margin: 0;
-		overflow-x: hidden;
-		@include box-sizing(border-box);
-		opacity: 0;
-		* {
-			@include box-sizing(border-box);
-			@include textSize(none);
-			padding: 0;
-			margin: 0;
-		}
-		// Background
-		background-color: $clr_bg-accent;
-
-		// Text
-		::-moz-selection {
-			color: $clr_bg-main;
-			background: rgba($clr_black, $opacity-solid);
-		}
-		::selection {
-			color: $clr_bg-main;
-			background: rgba($clr_black, $opacity-solid);
-		}
-
-		// Define the centralised maximum width for the main body content
-		.container {
-			padding: 0;
-			font-size: 0;
-			text-align: center;
-		}
-
-		#main {
-			transform: translate(0, 0);
-			-webkit-transform: translate(0, 0);
-			transition: $ease-main $speed-fast;
-			&.open {
-				transform: translate(-300px, 0);
-				-webkit-transform: translate(-300px, 0);
-			}
-		}
-		.masonry {
-			margin-left: auto;
-			margin-right: auto;
-			@media screen and (max-width: 799px) {
-				max-width: 100%;
-			}
-			@media screen and (min-width: 800px) and (max-width: 1199px) {
-				max-width: 800px;
-			}
-			@media screen and (min-width: 1200px) {
-				max-width: 1200px;
-			}
-		}
 	}
+}
 
-	// Scrollbars - Chrome/WebKit only. Will appear as normal in other browsers.
-	::-webkit-scrollbar {
-		width: ($baseline / 2);
+body {
+	// Structure
+	position: relative;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 0;
+	margin: 0;
+	overflow-x: hidden;
+	@include box-sizing(border-box);
+	opacity: 0;
+	// Background
+	background-color: $clr_bg-accent;
+	// Text
+	::-moz-selection {
+		color: $clr_bg-main;
 		background: rgba($clr_black, $opacity-solid);
 	}
 
-	::-webkit-scrollbar-track {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		left: calc(100% - 10px);
+	::selection {
+		color: $clr_bg-main;
+		background: rgba($clr_black, $opacity-solid);
+	}
+	// Define the centralised maximum width for the main body content
+	.container {
+		padding: 0;
+		font-size: 0;
+		text-align: center;
 	}
 
-	::-webkit-scrollbar-thumb {
-		background: rgba($clr_black, $opacity-solid);
-		border: 1px solid rgba($clr_bg-main, $opacity-standard);
-		@include border-radius(10px);
-		&:hover {
-			background: rgba($clr_grey-mid, $opacity-solid);
+	#main {
+		transform: translate(0, 0);
+		-webkit-transform: translate(0, 0);
+		transition: $ease-main $speed-fast;
+
+		&.open {
+			transform: translate(-300px, 0);
+			-webkit-transform: translate(-300px, 0);
 		}
 	}
+
+	.masonry {
+		margin-left: auto;
+		margin-right: auto;
+		@media screen and (max-width: 799px) {
+			max-width: 100%;
+		}
+		@media screen and (min-width: 800px) and (max-width: 1199px) {
+			max-width: 800px;
+		}
+		@media screen and (min-width: 1200px) {
+			max-width: 1200px;
+		}
+	}
+}
+// Scrollbars - Chrome/WebKit only. Will appear as normal in other browsers.
+::-webkit-scrollbar {
+	width: ($baseline / 2);
+	background: rgba($clr_black, $opacity-solid);
+}
+
+::-webkit-scrollbar-track {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: calc(100% - 10px);
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgba($clr_black, $opacity-solid);
+	border: 1px solid rgba($clr_bg-main, $opacity-standard);
+	@include border-radius(10px);
+
+	&:hover {
+		background: rgba($clr_grey-mid, $opacity-solid);
+	}
+}
+
+.central-column {
+	max-width: $max-width;
+	margin-right: auto;
+	margin-left: auto;
 }
