--- a/css/global/_links.scss
+++ b/css/global/_links.scss
@@ -6,7 +6,7 @@
 	font-size: $font_size-sml;
 	font-weight: bold;
 	text-transform: uppercase;
-	margin: 1rem 0;
+	margin: 2rem 0 1rem 0;
 	box-shadow: none !important;
 	position: relative;
 
