--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import 'css/base/variables';
 @import 'css/base/mixins';
 @import 'css/base/animations';
+@import 'css/base/grid';
 
 // Global
 @import 'css/global/global';
