--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,7 +1,7 @@
 // Baseline
-$baseline: 18px;
+$baseline: 1rem;
 $bl: $baseline;
-$b: $baseline;
+$b: $bl;
 
 // Colors
 $clr_brand: #a1213d;
@@ -27,12 +27,12 @@ $font_face-accent: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, 
 
 $font_clr-main: $clr_grey-dark;
 
-$font_size-xsm: ($b * 1);
-$font_size-sml: ($b * 1.2);
-$font_size-std: ($b * 1.6);
-$font_size-med: ($b * 2);
-$font_size-lrg: ($b * 3);
-$font_size-xlg: ($b * 4);
+$font_size-xsm: ($b * 0.75);
+$font_size-sml: ($b * 0.8);
+$font_size-std: ($b * 1);
+$font_size-med: ($b * 1.3);
+$font_size-lrg: ($b * 1.6);
+$font_size-xlg: ($b * 2);
 
 $line-height: 1.66;
 $lh: $line-height;
@@ -55,4 +55,4 @@ $speed-std: 500ms;
 $speed-slow: 800ms;
 $speed-slowest: 1000ms;
 
-$max-width: 1440px;
+$max-width: 1200px;
