--- a/css/elements/post/_post-meta.scss
+++ b/css/elements/post/_post-meta.scss
@@ -1,7 +1,7 @@
 .post__data--meta {
 	font-size: $font_size-xsm;
   color: $clr_grey-mid;
-	padding: $baseline 0 ($baseline - 1) 0;
+	padding: 0;
 	margin-bottom: $baseline;
 
 	ul {
