--- a/css/elements/post/_post-teaser.scss
+++ b/css/elements/post/_post-teaser.scss
@@ -1,42 +1,28 @@
-.container {
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 0;
+.post-teaser {
+	display: inline-block;
+	vertical-align: top;
+	background: $clr_white;
+	box-shadow: -1px -1px 0 rgba($clr_black, 0.1), 1px 1px 0 rgba($clr_black, 0.1);
 	position: relative;
-	z-index: 110;
-	.post--teaser {
-		display: inline-block;
-		margin: 0 auto;
-		padding: 0;
-		width: 400px;
-		font-size: 1rem;
-		vertical-align: top;
-		.inner {
-			position: relative;
-			transition: $ease-main $speed-fast;
-			box-shadow: inset 1px 1px 0 rgba($clr_grey-mid, $opacity-least), inset -1px -1px 0 rgba($clr_grey-mid, $opacity-least);
-			margin: ($baseline / 2);
-			background-color: $clr_bg-main;
 
-			.post__content {
-				padding: 1rem;
-				text-align: left;
-				p {
-					color: $font_clr-main;
-					font-size: $font_size-std;
-				}
-			}
-			footer.post__footer {
-				padding: 0 $baseline $baseline $baseline;
-				text-align: left;
-				line-height: $lh;
-				ul li {
-					font-size: $font_size-sml;
-				}
-			}
-		}
-		@media screen and (max-width: 799px) {
-			width: 100%;
-		}
+	.inner {
+		padding: 1rem;
+		text-align: left;
+	}
+
+	small {
+		color: $clr_grey-mid;
+		display: block;
+		margin: 1rem 0;
+	}
+
+	.hero__title--post {
+		font-size: $font_size-lrg;
+		line-height: $lh;
+	}
+
+	p {
+		display: block;
+		padding: 0.5rem 0;
 	}
 }
