--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -1,9 +1,9 @@
 html {
-	font-size: 18px;
+	font-size: 16px;
 	@media (min-width: 768px) {
-		font-size: between(20px, 18px, 768px, 1366px);
+		font-size: between(18px, 16px, 768px, $max-width);
 	}
-	@media (min-width: 1366px) {
+	@media (min-width: $max-width) {
 		font-size: 18px;
 	}
 	-webkit-overflow-scrolling: touch;
