--- a/css/structure/_flag.scss
+++ b/css/structure/_flag.scss
@@ -21,7 +21,7 @@
 		height: 0;
 		border-style: solid;
 		border-width: 0 ($baseline / 2) ($baseline / 2) 0;
-		border-color: transparent darken($clr_grey-mid, 10%) transparent transparent;
+		border-color: transparent darken($clr_brand, 10%) transparent transparent;
 	}
 	@media screen and (max-width: 567px) {
 		display: block;
