--- a/css/typography/_typography.scss
+++ b/css/typography/_typography.scss
@@ -1,5 +1,6 @@
 // Body Copy
-body {
+
+[class*="content"] {
 	font-family: $font_face-main;
 	font-size: 1rem;
 	color: $font_clr-main;
@@ -10,18 +11,24 @@ body {
 	text-align: left;
 	-webkit-font-smoothing: antialiased;
 
-	strong, b {
+	b,
+	strong {
 		font-family: inherit;
 		font-weight: 600;
 	}
 
-	em, i {
+	em,
+	i {
 		font-family: inherit;
 		font-style: italic;
 	}
-
 	// Headers
-	h1, h2, h3, h4, h5, h6 {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		display: block;
 		padding: 0;
 		margin: 0;
@@ -44,17 +51,21 @@ body {
 		color: $clr_black;
 	}
 
-	h4, h5, h6 {
+	h4,
+	h5,
+	h6 {
 		font-size: $font_size-std;
 		font-weight: bold;
 		text-transform: uppercase;
 	}
 
-	p {
-		display: block;
-		margin: $baseline 0 ($baseline * 1.3) 0;
-		line-height: 1.66;
-		font-size: 1rem;
+	.post-single & {
+		p {
+			display: block;
+			margin: $baseline 0 ($baseline * 1.3) 0;
+			line-height: 1.66;
+			font-size: 1rem;
+		}
 	}
 
 	hr {
@@ -63,9 +74,9 @@ body {
 		opacity: 0.2;
 		margin: ($baseline / 2) 0 (($baseline / 2) - 1) 0;
 	}
-
 	// HTML Styling
-	pre, .pre {
+	.pre,
+	pre {
 		display: block;
 		background-color: darken($clr_bg-main, 2%);
 		border: 1px solid darken($clr_bg-main, 5%);
