bugs - fixed single post hero

--- a/css/elements/_page-content.scss
+++ b/css/elements/_page-content.scss
@@ -1,3 +1,13 @@
+.single-post main.central-column {
+	max-width: 100% !important;
+}
+.single-post main.grid_container {
+	padding: 0 !important;
+}
+.single-post .post-single {
+	margin: 0 !important;
+}
+
 article.page--single {
 	width: 100%;
 	.page__content {
