--- a/css/elements/post/_post-single.scss
+++ b/css/elements/post/_post-single.scss
@@ -123,6 +123,6 @@ article.post-single {
   .post__footer {
     display: block;
     line-height: $lh;
-    margin: 2rem 1rem;
+    margin: 2rem auto;
   }
 }
