--- a/css/global/_links.scss
+++ b/css/global/_links.scss
@@ -3,7 +3,7 @@
 	text-decoration: none;
 	color: inherit;
 	font-family: $font_face-accent;
-	font-size: $font_size-sml;
+	font-size: $font_size-std;
 	font-weight: bold;
 	text-transform: uppercase;
 	margin: 2rem 0 1rem 0;
