--- a/css/typography/_links.scss
+++ b/css/typography/_links.scss
@@ -7,13 +7,13 @@
 		font-family: inherit;
 		text-decoration: none;
 		box-shadow: inset 0 -2px 0 $clr_brand;
-		padding-bottom: 4px;
+		padding-bottom: 2px;
 		transition: box-shadow $ease-main $speed-fast;
 		color: inherit;
 		cursor: pointer !important;
 
 		&:hover {
-			box-shadow: inset 0 -4px 0 $clr_brand;
+			box-shadow: inset 0 -3px 0 $clr_brand, 0 1px 0 $clr_brand;
 		}
 
 		&:visited {}
