--- a/style.css
+++ b/style.css
@@ -701,7 +701,7 @@ body.theme--dyslexia * {
     width: calc(41.66667% - 20px); }
   .item-6 {
     width: calc(50% - 20px); }
-  .item-7 {
+  .item-7, article.post-single .post__footer, article.post-single .post__author--bio {
     width: calc(58.33333% - 20px); }
   .item-8 {
     width: calc(66.66667% - 20px); }
@@ -715,14 +715,14 @@ body.theme--dyslexia * {
     width: calc(100% - 20px); } }
 
 html {
-  font-size: 16px;
+  font-size: 18px;
   -webkit-overflow-scrolling: touch; }
   @media (min-width: 768px) {
     html {
-      font-size: calc(21.55556px + -0.46296vw); } }
+      font-size: calc(23.55556px + -0.46296vw); } }
   @media (min-width: 1200px) {
     html {
-      font-size: 18px; } }
+      font-size: 20px; } }
   html * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -804,7 +804,7 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: #465255; }
 
-.central-column {
+.central-column, article.post-single .inner, article.post-single .post__author--bio {
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto; }
@@ -857,7 +857,7 @@ button:focus, select:focus, input:focus, textarea:focus {
   text-decoration: none;
   color: inherit;
   font-family: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, serif;
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   margin: 2rem 0 1rem 0;
@@ -1007,14 +1007,14 @@ ul.list--flags {
   font-family: inherit;
   text-decoration: none;
   box-shadow: inset 0 -2px 0 #a1213d;
-  padding-bottom: 4px;
+  padding-bottom: 2px;
   transition: box-shadow cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms;
   color: inherit;
   cursor: pointer !important; }
   .post a:hover,
   .post a:active:hover,
   .post a:link:hover {
-    box-shadow: inset 0 -4px 0 #a1213d; }
+    box-shadow: inset 0 -3px 0 #a1213d, 0 1px 0 #a1213d; }
 
 .post__content--inner ul {
   padding-left: 1rem;
@@ -1392,52 +1392,63 @@ section.navigation {
       #nav-social_sharing li a:hover {
         font-weight: bold; }
 
-.post__data--meta {
+.post__data--meta ul li:before {
+  font-family: FontAwesome;
+  content: "";
+  padding-right: 0.5em;
+  display: inline-block; }
+
+.post__data--meta ul li.author:before {
+  content: "\f007"; }
+
+.post__data--meta ul li.date:before {
+  content: "\f073"; }
+
+.post__data--meta ul li.read_time:before {
+  content: "\f017"; }
+
+.post__data--meta ul li.comments:before {
+  content: "\f086"; }
+
+.post__data--meta ul li.read_comments:before {
+  content: "\f02d"; }
+
+.post__data--meta ul li.write_comments:before {
+  content: "\f040"; }
+
+.post__data--meta ul li.edit:before {
+  content: "\f040"; }
+
+.post__data--meta ul li.twitter:before {
+  content: "\f099"; }
+
+.post__data--meta ul li.instagram:before {
+  content: "\f16d"; }
+
+.post__data--meta ul li:hover:before {
+  -webkit-animation: pulse 0.25s 1;
+  -moz-animation: pulse 0.25s 1;
+  -ms-animation: pulse 0.25s 1;
+  -o-animation: pulse 0.25s 1;
+  animation: pulse 0.25s 1; }
+
+.post__data {
   font-size: 0.75rem;
   color: #465255;
   padding: 0;
   margin-bottom: 1rem; }
-  .post__data--meta ul li {
-    font-size: 0.75rem;
-    line-height: 1.66; }
-    .post__data--meta ul li:before {
-      font-family: FontAwesome;
-      content: "";
-      padding-right: 0.5em;
-      display: inline-block; }
-    .post__data--meta ul li.author:before {
-      content: "\f007"; }
-    .post__data--meta ul li.date:before {
-      content: "\f073"; }
-    .post__data--meta ul li.read_time:before {
-      content: "\f017"; }
-    .post__data--meta ul li.comments:before {
-      content: "\f086"; }
-    .post__data--meta ul li.read_comments:before {
-      content: "\f02d"; }
-    .post__data--meta ul li.write_comments:before {
-      content: "\f040"; }
-    .post__data--meta ul li.edit:before {
-      content: "\f040"; }
-    .post__data--meta ul li.twitter:before {
-      content: "\f099"; }
-    .post__data--meta ul li.instagram:before {
-      content: "\f16d"; }
-    .post__data--meta ul li:hover:before {
-      -webkit-animation: pulse 0.25s 1;
-      -moz-animation: pulse 0.25s 1;
-      -ms-animation: pulse 0.25s 1;
-      -o-animation: pulse 0.25s 1;
-      animation: pulse 0.25s 1; }
-  .post__data--meta cite {
+  .post__data ul li {
+    font-size: 0.75rem !important;
+    line-height: 1.8; }
+  .post__data cite {
     font-style: normal; }
-  .post__data--meta .author__avatar {
+  .post__data .author__avatar {
     -webkit-border-radius: 50%;
     border-radius: 50%;
     background-clip: padding-box;
     /* stops bg color from leaking outside the border: */
     display: inline-block; }
-    .post__data--meta .author__avatar.author__avatar--small {
+    .post__data .author__avatar.author__avatar--small {
       width: 0.8rem;
       height: 0.8rem; }
 
@@ -1498,7 +1509,7 @@ section.navigation {
   box-shadow: -1px -1px 0 rgba(1, 1, 1, 0.1), 1px 1px 0 rgba(1, 1, 1, 0.1);
   position: relative; }
   .post-teaser .inner {
-    padding: 1rem;
+    padding: 2rem;
     text-align: left; }
   .post-teaser small {
     color: #465255;
@@ -1506,66 +1517,67 @@ section.navigation {
     margin: 1rem 0; }
   .post-teaser .hero__title--post {
     font-size: 1.6rem;
-    line-height: 1.66; }
+    line-height: 1.8;
+    padding: 2rem; }
   .post-teaser p {
     display: block;
     padding: 0.5rem 0; }
 
 article.post-single {
   width: 100%; }
-  article.post-single .post__content {
+  article.post-single .post__content, article.post-single .post__author--bio {
+    display: block;
     background: #fffffe;
     position: relative;
     z-index: 110;
     font-size: 1rem;
-    max-width: 640px;
     margin: 0 auto;
     padding: 1rem;
-    line-height: 1.66;
+    line-height: 1.8;
     text-align: left; }
-    article.post-single .post__content ul, article.post-single .post__content ol {
+    article.post-single .post__content ul, article.post-single .post__author--bio ul, article.post-single .post__content ol, article.post-single .post__author--bio ol {
       padding: 1rem 2rem; }
-      article.post-single .post__content ul li, article.post-single .post__content ol li {
+      article.post-single .post__content ul li, article.post-single .post__author--bio ul li, article.post-single .post__content ol li, article.post-single .post__author--bio ol li {
         line-height: 1.5;
         padding-bottom: 0.5rem; }
-        article.post-single .post__content ul li:last-child, article.post-single .post__content ol li:last-child {
+        article.post-single .post__content ul li:last-child, article.post-single .post__author--bio ul li:last-child, article.post-single .post__content ol li:last-child, article.post-single .post__author--bio ol li:last-child {
           padding-bottom: 0; }
-    article.post-single .post__content .intro {
+    article.post-single .post__content .intro, article.post-single .post__author--bio .intro {
       font-family: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, serif !important;
       font-size: 1.3rem;
       font-weight: 200;
       line-height: 1.5; }
-      article.post-single .post__content .intro p {
+      article.post-single .post__content .intro p, article.post-single .post__author--bio .intro p {
         font-family: inherit;
         font-size: inherit;
         font-weight: inherit;
         line-height: inherit; }
-    article.post-single .post__content h1, article.post-single .post__content h2, article.post-single .post__content h3, article.post-single .post__content h4, article.post-single .post__content h5, article.post-single .post__content h6 {
+    article.post-single .post__content h1, article.post-single .post__author--bio h1, article.post-single .post__content h2, article.post-single .post__author--bio h2, article.post-single .post__content h3, article.post-single .post__author--bio h3, article.post-single .post__content h4, article.post-single .post__author--bio h4, article.post-single .post__content h5, article.post-single .post__author--bio h5, article.post-single .post__content h6, article.post-single .post__author--bio h6 {
       line-height: 125%;
       margin: 3rem 0 1rem 0; }
-    article.post-single .post__content .alignleft, article.post-single .post__content .alignright, article.post-single .post__content .aligncenter, article.post-single .post__content .alignnone {
+    article.post-single .post__content .alignleft, article.post-single .post__author--bio .alignleft, article.post-single .post__content .alignright, article.post-single .post__author--bio .alignright, article.post-single .post__content .aligncenter, article.post-single .post__author--bio .aligncenter, article.post-single .post__content .alignnone, article.post-single .post__author--bio .alignnone {
       display: block;
       margin-top: 1rem;
       margin-bottom: 1rem;
       vertical-align: text-top; }
-    article.post-single .post__content .alignleft {
+    article.post-single .post__content .alignleft, article.post-single .post__author--bio .alignleft {
       float: left;
       margin-left: 0;
       margin-right: 1rem; }
-    article.post-single .post__content .alignright {
+    article.post-single .post__content .alignright, article.post-single .post__author--bio .alignright {
       float: right;
       margin-left: 1rem;
       margin-right: 0; }
-    article.post-single .post__content .aligncenter, article.post-single .post__content .alignnone {
+    article.post-single .post__content .aligncenter, article.post-single .post__author--bio .aligncenter, article.post-single .post__content .alignnone, article.post-single .post__author--bio .alignnone {
       float: none;
       margin-left: auto;
       margin-right: auto; }
-    article.post-single .post__content img, article.post-single .post__content figure, article.post-single .post__content .wp-caption {
+    article.post-single .post__content img, article.post-single .post__author--bio img, article.post-single .post__content figure, article.post-single .post__author--bio figure, article.post-single .post__content .wp-caption, article.post-single .post__author--bio .wp-caption {
       display: block;
       max-width: 100% !important;
       height: auto !important;
       margin: 0 auto; }
-    article.post-single .post__content figcaption, article.post-single .post__content .wp-caption-text {
+    article.post-single .post__content figcaption, article.post-single .post__author--bio figcaption, article.post-single .post__content .wp-caption-text, article.post-single .post__author--bio .wp-caption-text {
       display: block;
       width: 100%;
       padding: 0.5rem;
@@ -1574,19 +1586,18 @@ article.post-single {
       text-align: center;
       background-color: #dfe3e4;
       position: relative; }
-      @media screen and (min-width: 767px) {
-        article.post-single .post__content figcaption:before, article.post-single .post__content .wp-caption-text:before {
-          content: "";
-          width: 0;
-          height: 0;
-          border-left: 1rem solid transparent;
-          border-right: 1rem solid transparent;
-          border-bottom: 1rem solid #dfe3e4;
-          position: absolute;
-          top: -1rem;
-          left: 2rem;
-          z-index: 5000; } }
-    article.post-single .post__content blockquote {
+      article.post-single .post__content figcaption:before, article.post-single .post__author--bio figcaption:before, article.post-single .post__content .wp-caption-text:before, article.post-single .post__author--bio .wp-caption-text:before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-left: 1rem solid transparent;
+        border-right: 1rem solid transparent;
+        border-bottom: 1rem solid #dfe3e4;
+        position: absolute;
+        top: -1rem;
+        left: 2rem;
+        z-index: 5000; }
+    article.post-single .post__content blockquote, article.post-single .post__author--bio blockquote {
       display: block;
       width: 100%;
       margin: 0.5rem 0;
@@ -1597,27 +1608,31 @@ article.post-single {
       color: #4e5b5f;
       font-size: 1rem;
       font-family: "Comfortaa", "Times New Roman", Times, Baskerville, Georgia, serif; }
-      article.post-single .post__content blockquote p {
+      article.post-single .post__content blockquote p, article.post-single .post__author--bio blockquote p {
         font-size: inherit;
         margin: 0; }
-      article.post-single .post__content blockquote a {
+      article.post-single .post__content blockquote a, article.post-single .post__author--bio blockquote a {
         text-decoration: none; }
-      article.post-single .post__content blockquote a span, article.post-single .post__content blockquote span, article.post-single .post__content blockquote span a, article.post-single .post__content blockquote cite, article.post-single .post__content blockquote a cite, article.post-single .post__content blockquote cite a {
+      article.post-single .post__content blockquote a span, article.post-single .post__author--bio blockquote a span, article.post-single .post__content blockquote span, article.post-single .post__author--bio blockquote span, article.post-single .post__content blockquote span a, article.post-single .post__author--bio blockquote span a, article.post-single .post__content blockquote cite, article.post-single .post__author--bio blockquote cite, article.post-single .post__content blockquote a cite, article.post-single .post__author--bio blockquote a cite, article.post-single .post__content blockquote cite a, article.post-single .post__author--bio blockquote cite a {
         display: block;
         text-align: right; }
-        article.post-single .post__content blockquote a span:before, article.post-single .post__content blockquote span:before, article.post-single .post__content blockquote span a:before, article.post-single .post__content blockquote cite:before, article.post-single .post__content blockquote a cite:before, article.post-single .post__content blockquote cite a:before {
+        article.post-single .post__content blockquote a span:before, article.post-single .post__author--bio blockquote a span:before, article.post-single .post__content blockquote span:before, article.post-single .post__author--bio blockquote span:before, article.post-single .post__content blockquote span a:before, article.post-single .post__author--bio blockquote span a:before, article.post-single .post__content blockquote cite:before, article.post-single .post__author--bio blockquote cite:before, article.post-single .post__content blockquote a cite:before, article.post-single .post__author--bio blockquote a cite:before, article.post-single .post__content blockquote cite a:before, article.post-single .post__author--bio blockquote cite a:before {
           content: "~ "; }
-      article.post-single .post__content blockquote:before, article.post-single .post__content blockquote:after {
+      article.post-single .post__content blockquote:before, article.post-single .post__author--bio blockquote:before, article.post-single .post__content blockquote:after, article.post-single .post__author--bio blockquote:after {
         content: "";
         display: table;
         clear: both;
         float: none; }
   article.post-single .post__footer {
     display: block;
-    line-height: 1.66;
+    line-height: 1.8;
+    margin: 2rem auto; }
+  article.post-single .post__author--bio {
+    display: block;
+    line-height: 1.8;
     margin: 2rem auto; }
 
-.single-post main.central-column {
+.single-post main.central-column, .single-post article.post-single main.inner, article.post-single .single-post main.inner, .single-post article.post-single main.post__author--bio, article.post-single .single-post main.post__author--bio {
   max-width: 100% !important; }
 
 .single-post main.grid_container {
